# investment

./: .gitignore  LICENSE  README.md  investment.cabal
src/Finance/: Investment.hs
src/Finance/Investment/: DullLife.hs
