name:                investment
version:             0.1.0.0
synopsis:            Describe and simulate your investments with Haskell
description:         Library for describing investments or other stateful, time-dependent finance activities.
                     The description happens in the Investment monad which is then run for a number of hours,
                     or days; maximum granularity for controlling the investment is 1 minute. Investment wraps
                     around the IO monad, so any external inputs/random can be used within the description
                     right away.
license:             BSD2
license-file:        LICENSE
author:              Nikolay Burkov
maintainer:          nbrk@linklevel.net
-- copyright:           
category:            Finance
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Finance.Investment
  other-modules:       Finance.Investment.DullLife
  -- other-extensions:    
  build-depends:       base >=4.8 && <5.0, mtl, time, groups
  hs-source-dirs:      src
  default-language:    Haskell2010
